about section, meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Virtual Assistant Services - Website Development and SEO, CRM, CMS, & Admin Tasks, Social Media Graphics & Video, Process Optimization / Automation">
     <title>BVD VA's</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -143,8 +145,74 @@
         </div>
     </section>
 
+    <!-- About -->
+    <section class="about section">
+        <div class="container">
+            <h2 class="section-title">About Us</h2>
+            <h3 class="text-center mb-sm">Integrate. Innovate. Automate.</h3>
+            <div class="about-wrap mb-md">
+                <div class="writeup">
+                    <p>BVD Virtual Assistants (BVD VAs) is an up-and-coming, close-knit family-run team of professionals
+                        coming
+                        from different fields and businesses. We have more than 10 years of combined experience
+                        providing
+                        remote
+                        professional services to different clients, and more than 20 years working in a corporate setup.
+                        The
+                        decision to work as a team just came natural as our experience, closeness, skills and network
+                        with
+                        other
+                        professionals create a synergy that can benefit our clients and our community.</p>
+                    <p>Everyone who works with us, and everyone we work for becomes part of our family. Thus, we treat
+                        them
+                        as
+                        how we will treat people who are dear to us. We vision their vision, and work with passion and
+                        dedication until we see them successful. </p>
+                </div>
+                <div class="testimonials">
+                    <p>Client satisfaction is the key to loyalty! </p>
+                    <ul>
+                        <li><img src="./images/testimonials/testimonial-2.jpg" alt="client testimonial" width="702"
+                                height="118"></li>
+                        <li><img src="./images/testimonials/testimonial-1.jpg" alt="client testimonial" width="444"
+                                height="109"></li>
+                        <li><img src="./images/testimonials/testimonial-3.jpg" alt="client testimonial" width="621"
+                                height="112"></li>
+                    </ul>
+                </div>
+                <div class="kudos">
+                    <h3>Testimonials and Kudos</h3>
+                    <p>We cherish our clients' feedback and inspires us to consistently give more value.</p>
+                    <ul>
+                        <li><img src="./images/testimonials/kudos-2.jpg" alt="client testimonial" width="563"
+                                height="104">
+                        </li>
+                        <li><img src="./images/testimonials/kudos-1.jpg" alt="client testimonial" width="485"
+                                height="86">
+                        </li>
+                        <li><img src="./images/testimonials/kudos-7.jpg" alt="client testimonial" width="561"
+                                height="100">
+                        </li>
+                        <li><img src="./images/testimonials/kudos-4.jpg" alt="client testimonial" width="430"
+                                height="63">
+                        </li>
+                        <li><img src="./images/testimonials/kudos-6.jpg" alt="client testimonial" width="563"
+                                height="168"></li>
+
+                        <li><img src="./images/testimonials/kudos-5.jpg" alt="client testimonial" width="730"
+                                height="103">
+                        </li>
+                        <li><img src="./images/testimonials/kudos-3.jpg" alt="client testimonial" width="454"
+                                height="92">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script>
+        // For mobile menu toggler button
         const toggler = document.getElementById('toggler');
         const menu = document.getElementById('menu');
 
