--- a/index.html
+++ b/index.html
@@ -211,6 +211,29 @@
         </div>
     </section>
 
+    <!-- Companies -->
+    <section class="companies">
+        <div class="container">
+            <p class="mb-sm text-center">We are proud of the current and previous companies we've worked with.</p>
+            <ul>
+                <li><img src="./images/companies/remax-first.jpg" alt="RE/MAX First Calgary"
+                        title="RE/MAX First Calgary" width="143" height="73"></li>
+                <li><img src="./images/companies/mcgrath.jpg" alt="McGrath Australia" title="McGrath Australia"
+                        width="143" height="41.75"></li>
+                <li><img src="./images/companies/iqor.png" alt="iQor Philippines" title="iQor Philippines" width="143"
+                        height="51.08"></li>
+                <li><img src="./images/companies/beepo.png" alt="Beepo Australia" title="Beepo Australia" width="143"
+                        height="45.19"></li>
+                <li><img src="./images/companies/nco-group.jpg" alt="NCO Group ( now Alorica )"
+                        title="NCO Group ( now Alorica )" width="143" height="51.38"></li>
+                <li><img src="./images/companies/teletech.jpg.png" alt="Teletech" title="Teletech" width="143"
+                        height="44.13"></li>
+            </ul>
+        </div>
+    </section>
+
+    <br><br><br><br><br><br><br><br><br><br><br>
+
     <script>
         // For mobile menu toggler button
         const toggler = document.getElementById('toggler');
