portfolio, added lightbox

--- a/index.html
+++ b/index.html
@@ -232,24 +232,50 @@
         </div>
     </section>
 
+    <!-- Portfolio -->
+    <section class="portfolio section">
+        <div class="container">
+            <h2 class="section-title">Portfolio</h2>
+            <p class="text-center mb-sm">See some of our sample works below.</p>
+
+            <ul>
+                <li>
+                    <a href="./images/portfolio/crm-cms/c-r-e.jpg" class="glightbox">
+                        <img src="./images/portfolio/crm-cms/c-r-e.jpg" alt="CRE CRM/CMS">
+                    </a>
+                </li>
+                <li>
+                    <a href="./images/portfolio/crm-cms/r-e.jpg" class="glightbox">
+                        <img src="./images/portfolio/crm-cms/r-e.jpg" alt="RE CRM/CMS">
+                    </a>
+                </li>
+                <li>
+                    <a href="./images/portfolio/crm-cms/fub.jpg" class="glightbox">
+                        <img src="./images/portfolio/crm-cms/fub.jpg" alt="FUB CRM">
+                    </a>
+                </li>
+                <li>
+                    <a href="./images/portfolio/crm-cms/connections-inc.jpg" class="glightbox">
+                        <img src="./images/portfolio/crm-cms/connections-inc.jpg" alt="Connections Inc.">
+                    </a>
+                </li>
+                <li>
+                    <a href="./images/portfolio/crm-cms/new-ca.jpg" class="glightbox">
+                        <img src="./images/portfolio/crm-cms/new-ca.jpg" alt="CRM/CMS">
+                    </a>
+                </li>
+                <li>
+                    <a href="./images/portfolio/crm-cms/deal-manager.jpg" class="glightbox">
+                        <img src="./images/portfolio/crm-cms/deal-manager.jpg" alt="Deal Manager">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
     <br><br><br><br><br><br><br><br><br><br><br>
 
-    <script>
-        // For mobile menu toggler button
-        const toggler = document.getElementById('toggler');
-        const menu = document.getElementById('menu');
-
-        toggler.addEventListener('click', (e) => {
-            toggler.classList.toggle('change');
-
-            if (toggler.classList.contains('change')) {
-                menu.style.display = 'block';
-            } else {
-                menu.style.display = 'none';
-            }
-        })
-
-    </script>
+    <script src="./js/bundle-dist.js"></script>
 </body>
 
 </html>
