portfolio - layout update

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <ul id="menu" class="menu">
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -80,7 +80,7 @@
     </section>
 
     <!-- Services -->
-    <section class="services section">
+    <section class="services section" id="services">
         <div class="container">
             <h2 class="section-title">Our Services</h2>
             <p>We provide a flexible arrangement on our sets of services tailor-fit on what your business needs.</p>
@@ -146,7 +146,7 @@
     </section>
 
     <!-- About -->
-    <section class="about section">
+    <section class="about section" id="about">
         <div class="container">
             <h2 class="section-title">About Us</h2>
             <h3 class="text-center mb-sm">Integrate. Innovate. Automate.</h3>
@@ -233,43 +233,125 @@
     </section>
 
     <!-- Portfolio -->
-    <section class="portfolio section">
+    <section class="portfolio section" id="portfolio">
         <div class="container">
             <h2 class="section-title">Portfolio</h2>
-            <p class="text-center mb-sm">See some of our sample works below.</p>
+            <p class="text-center mb-md">See some of our sample works below.</p>
 
-            <ul>
-                <li>
-                    <a href="./images/portfolio/crm-cms/c-r-e.jpg" class="glightbox">
-                        <img src="./images/portfolio/crm-cms/c-r-e.jpg" alt="CRE CRM/CMS">
+            <!-- CRM and CMS -->
+            <div class="portfolio-category mb-lg">
+                <div class="portfolio-category__text mb-sm">
+                    <h3>Leads Management, Blogs Posting, Reports, </h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics,
+                        a large language ocean. A small river named Duden flows by their place and supplies it with the
+                        necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
+                        into your mouth. </p>
+
+                    <a class="glightbox btn btn-outline" href="./images/portfolio/crm-cms/fub.jpg"
+                        style="margin-left: 0;">See Gallery</a>
+                </div>
+                <div class="portfolio-category__images">
+                    <a class="glightbox" href="./images/portfolio/crm-cms/r-e.jpg">
+                        <img src="./images/portfolio/crm-cms/r-e.jpg" alt="CRM and CMS" width="300" height="200">
                     </a>
-                </li>
-                <li>
-                    <a href="./images/portfolio/crm-cms/r-e.jpg" class="glightbox">
-                        <img src="./images/portfolio/crm-cms/r-e.jpg" alt="RE CRM/CMS">
+                    <a class="glightbox" href="./images/portfolio/crm-cms/c-r-e.jpg">
+                        <img src="./images/portfolio/crm-cms/c-r-e.jpg" alt="CRM and CMS" width="300" height="200">
                     </a>
-                </li>
-                <li>
-                    <a href="./images/portfolio/crm-cms/fub.jpg" class="glightbox">
-                        <img src="./images/portfolio/crm-cms/fub.jpg" alt="FUB CRM">
+                    <a class="glightbox" href="./images/portfolio/crm-cms/connections-inc.jpg">
+                        <img src="./images/portfolio/crm-cms/connections-inc.jpg" alt="CRM and CMS" width="300"
+                            height="200">
                     </a>
-                </li>
-                <li>
-                    <a href="./images/portfolio/crm-cms/connections-inc.jpg" class="glightbox">
-                        <img src="./images/portfolio/crm-cms/connections-inc.jpg" alt="Connections Inc.">
+                    <a class="glightbox" href="./images/portfolio/crm-cms/new-ca.jpg">
+                        <img style="display:none" src="./images/portfolio/crm-cms/new-ca.jpg" alt="CRM and CMS"
+                            width="300" height="200">
                     </a>
-                </li>
-                <li>
-                    <a href="./images/portfolio/crm-cms/new-ca.jpg" class="glightbox">
-                        <img src="./images/portfolio/crm-cms/new-ca.jpg" alt="CRM/CMS">
+                    <a class="glightbox" href="./images/portfolio/crm-cms/deal-manager.jpg">
+                        <img style="display:none" src="./images/portfolio/crm-cms/deal-manager.jpg" alt="CRM and CMS"
+                            width="300" height="200">
                     </a>
-                </li>
-                <li>
-                    <a href="./images/portfolio/crm-cms/deal-manager.jpg" class="glightbox">
-                        <img src="./images/portfolio/crm-cms/deal-manager.jpg" alt="Deal Manager">
+                </div>
+            </div>
+
+            <!-- Graphics and Video -->
+            <div class="portfolio-category portfolio-category--reverse mb-lg">
+                <div class="portfolio-category__text mb-sm">
+                    <h3>Instagram, FB, LinkedIn Posts, YouTube Video Optimization</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics,
+                        a large language ocean. A small river named Duden flows by their place and supplies it with the
+                        necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
+                        into your mouth. </p>
+
+                    <a href="./images/portfolio/graphics/just-sold.png" class="glightboxGV btn btn-outline"
+                        style="margin-left: 0;">See Gallery</a>
+                </div>
+                <div class="portfolio-category__images">
+                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-1.jpg">
+                        <img src="./images/portfolio/graphics/hot-spot-1.jpg" alt="Social Media sample posts"
+                            width="300" height="200">
                     </a>
-                </li>
-            </ul>
+                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-2.jpg">
+                        <img src="./images/portfolio/graphics/hot-spot-2.jpg" alt="Social Media sample posts"
+                            width="300" height="200">
+                    </a>
+                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-3.jpg">
+                        <img src="./images/portfolio/graphics/hot-spot-3.jpg" alt="Social Media sample posts"
+                            width="300" height="200">
+                    </a>
+                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-1.png">
+                        <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-1.png"
+                            alt="Social Media sample posts" width="300" height="200">
+                    </a>
+                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-2.png">
+                        <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-2.png"
+                            alt="Social Media sample posts" width="300" height="200">
+                    </a>
+                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-3.png">
+                        <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-3.png"
+                            alt="Social Media sample posts" width="300" height="200">
+                    </a>
+                </div>
+            </div>
+
+
+            <!-- Web and SEO -->
+            <div class="portfolio-category mb-lg">
+                <div class="portfolio-category__text mb-sm">
+                    <h3>Website Dev and Design, SEO, Core Web Vitals, Landing Page, Maintenance and Management
+                    </h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics,
+                        a large language ocean. A small river named Duden flows by their place and supplies it with the
+                        necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
+                        into your mouth. </p>
+
+                    <a href="./images/portfolio/web-seo/web-design-and-dev-4.jpg" class="glightboxWeb btn btn-outline"
+                        style="margin-left: 0;">See Gallery</a>
+                </div>
+                <div class="portfolio-category__images">
+                    <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-3.jpg">
+                        <img src="./images/portfolio/web-seo/web-design-and-dev-thumb-3.jpg" alt="CRM and CMS"
+                            width="300" height="200">
+                    </a>
+                    <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-5.jpeg">
+                        <img src="./images/portfolio/web-seo/web-design-and-dev-thumb-5.jpg" alt="CRM and CMS"
+                            width="300" height="200">
+                    </a>
+                    <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-4.jpg">
+                        <img src="./images/portfolio/web-seo/web-design-and-dev-thumb-4.jpg" alt="CRM and CMS"
+                            width="300" height="200">
+                    </a>
+                    <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-1.jpeg">
+                        <img style="display:none" src="./images/portfolio/web-seo/web-design-and-dev-thumb-1.jpg"
+                            alt="CRM and CMS" width="300" height="200">
+                    </a>
+                    <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-2.jpeg">
+                        <img style="display:none" src="./images/portfolio/web-seo/web-design-and-dev-thumb-2.jpg"
+                            alt="CRM and CMS" width="300" height="200">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
