contact us, calendly

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="cta">
                 <div class="cta-text">
                     <h2>We really MUST have a chat!</h2>
-                    <a href="" class="btn btn-secondary">Book a FREE 15-min call</a>
-                    <a href="" class="btn btn-outline">Send us a Message</a>
+                    <a href="#contact" class="btn btn-secondary">Book a FREE 15-min call</a>
+                    <a href="#portfolio" class="btn btn-outline">Check out our Portfolio</a>
                 </div>
                 <img src="./images/calendar.svg" alt="calendar icon" width="200" height="200">
             </div>
@@ -92,7 +92,7 @@
                             more
                             efficient and streamlined system using our Integrate-Innovate-Automate approach.</p>
                         <div class="service-cta">
-                            <a href="" class="btn btn-secondary">Book a call</a>
+                            <a href="#contact" class="btn btn-secondary">Book a call</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -106,7 +106,7 @@
                             website? Creating a new page? Posting a blog? Make a website fast? Increase the chance to
                             rank in search engine results? --- We can deliver!</p>
                         <div class="service-cta">
-                            <a href="" class="btn btn-secondary">Book a call</a>
+                            <a href="#contact" class="btn btn-secondary">Book a call</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -121,7 +121,7 @@
                             customer data sanitization, and reporting. Results: More referrals and repeat business ---
                             consistent follow-up is key!</p>
                         <div class="service-cta">
-                            <a href="" class="btn btn-secondary">Book a call</a>
+                            <a href="#contact" class="btn btn-secondary">Book a call</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -134,7 +134,7 @@
                         <p>Building social media engagement that promotes greater brand awareness. Great-looking photos,
                             videos, and quality content to attract new leads and customers.</p>
                         <div class="service-cta">
-                            <a href="" class="btn btn-secondary">Book a call</a>
+                            <a href="#contact" class="btn btn-secondary">Book a call</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -170,7 +170,7 @@
                         dedication until we see them successful. </p>
                 </div>
                 <div class="testimonials">
-                    <p>Client satisfaction is the key to loyalty! </p>
+                    <p><span class="text-emphasis">Client satisfaction</span> is the key to loyalty! </p>
                     <ul>
                         <li><img src="./images/testimonials/testimonial-2.jpg" alt="client testimonial" width="702"
                                 height="118"></li>
@@ -182,7 +182,8 @@
                 </div>
                 <div class="kudos">
                     <h3>Testimonials and Kudos</h3>
-                    <p>We cherish our clients' feedback and inspires us to consistently give more value.</p>
+                    <p>We cherish our <span class="text-emphasis">clients' feedback</span> and inspires us to
+                        consistently give more value.</p>
                     <ul>
                         <li><img src="./images/testimonials/kudos-2.jpg" alt="client testimonial" width="563"
                                 height="104">
@@ -214,7 +215,8 @@
     <!-- Companies -->
     <section class="companies">
         <div class="container">
-            <p class="mb-sm text-center">We are proud of the current and previous companies we've worked with.</p>
+            <p class="mb-sm text-center">We are proud of the current and previous <span class="text-emphasis">companies
+                    we've worked with</span>.</p>
             <ul>
                 <li><img src="./images/companies/remax-first.jpg" alt="RE/MAX First Calgary"
                         title="RE/MAX First Calgary" width="143" height="73"></li>
@@ -291,20 +293,20 @@
                         <img src="./images/portfolio/graphics/hot-spot-1.jpg" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-2.jpg">
-                        <img src="./images/portfolio/graphics/hot-spot-2.jpg" alt="Social Media sample posts"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-2.png">
+                        <img src="./images/portfolio/graphics/tuesday-tip-2.png" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-3.jpg">
-                        <img src="./images/portfolio/graphics/hot-spot-3.jpg" alt="Social Media sample posts"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-2.jpg">
+                        <img src="./images/portfolio/graphics/hot-spot-2.jpg" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-1.png">
                         <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-1.png"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-2.png">
-                        <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-2.png"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-3.jpg">
+                        <img style="display:none" src="./images/portfolio/graphics/hot-spot-3.jpg"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-3.png">
@@ -355,7 +357,32 @@
         </div>
     </section>
 
-    <br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Contact -->
+    <section class="contact section" id="contact">
+        <div class="container">
+            <h2 class="section-title-white">Contact Us</h2>
+            <p class="text-center text-white">Please use the calendar below to book a <span class="text-emphasis">FREE
+                    15-min Discovery
+                    Call</span> with
+                us.</p>
+        </div>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget"
+            data-url="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
+            style="min-width:320px;height:650px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer" style="background: #361956;">
+        <div class="container">
+            <p class="text-center text-white" style="padding: 1.5rem 0;  letter-spacing: 1px;">
+                Copyright &copy; 2021 | BVD
+                Virtual Assistants
+            </p>
+        </div>
+    </footer>
 
     <script src="./js/bundle-dist.js"></script>
 </body>
