batch 1 to webp

--- a/index.html
+++ b/index.html
@@ -255,22 +255,23 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightbox" href="./images/portfolio/crm-cms/r-e.jpg">
-                        <img src="./images/portfolio/crm-cms/r-e.jpg" alt="CRM and CMS" width="300" height="200">
+                        <img src="./images/portfolio/crm-cms/webp/r-e.webp" alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/c-r-e.jpg">
-                        <img src="./images/portfolio/crm-cms/c-r-e.jpg" alt="CRM and CMS" width="300" height="200">
+                        <img src="./images/portfolio/crm-cms/webp/c-r-e.webp" alt="CRM and CMS" width="300"
+                            height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/connections-inc.jpg">
-                        <img src="./images/portfolio/crm-cms/connections-inc.jpg" alt="CRM and CMS" width="300"
+                        <img src="./images/portfolio/crm-cms/webp/connections-inc.webp" alt="CRM and CMS" width="300"
                             height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/new-ca.jpg">
-                        <img style="display:none" src="./images/portfolio/crm-cms/new-ca.jpg" alt="CRM and CMS"
+                        <img style="display:none" src="./images/portfolio/webp/crm-cms/new-ca.webp" alt="CRM and CMS"
                             width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/deal-manager.jpg">
-                        <img style="display:none" src="./images/portfolio/crm-cms/deal-manager.jpg" alt="CRM and CMS"
-                            width="300" height="200">
+                        <img style="display:none" src="./images/portfolio/crm-cms/webp/deal-manager.webp"
+                            alt="CRM and CMS" width="300" height="200">
                     </a>
                 </div>
             </div>
