--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                             height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/new-ca.jpg">
-                        <img style="display:none" src="./images/portfolio/webp/crm-cms/new-ca.webp" alt="CRM and CMS"
-                            width="300" height="200">
+                        <img style="display:none" src="./images/portfolio/webp/crm-cms/webp/new-ca.webp"
+                            alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/deal-manager.jpg">
                         <img style="display:none" src="./images/portfolio/crm-cms/webp/deal-manager.webp"
@@ -286,32 +286,32 @@
                         necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
                         into your mouth. </p>
 
-                    <a href="./images/portfolio/graphics/just-sold.png" class="glightboxGV btn btn-outline"
+                    <a href="./images/portfolio/graphics/webp/just-sold.webp" class="glightboxGV btn btn-outline"
                         style="margin-left: 0;">See Gallery</a>
                 </div>
                 <div class="portfolio-category__images">
-                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-1.jpg">
-                        <img src="./images/portfolio/graphics/hot-spot-1.jpg" alt="Social Media sample posts"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-1.webp">
+                        <img src="./images/portfolio/graphics/webp/hot-spot-1.webp" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-2.png">
-                        <img src="./images/portfolio/graphics/tuesday-tip-2.png" alt="Social Media sample posts"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-2.webp">
+                        <img src="./images/portfolio/graphics/webp/tuesday-tip-2.webp" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-2.jpg">
-                        <img src="./images/portfolio/graphics/hot-spot-2.jpg" alt="Social Media sample posts"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-2.webp">
+                        <img src="./images/portfolio/graphics/webp/hot-spot-2.webp" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-1.png">
-                        <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-1.png"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-1.webp">
+                        <img style="display:none" src="./images/portfolio/graphics/webp/tuesday-tip-1.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/hot-spot-3.jpg">
-                        <img style="display:none" src="./images/portfolio/graphics/hot-spot-3.jpg"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-3.webp">
+                        <img style="display:none" src="./images/portfolio/webp/graphics/hot-spot-3.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
-                    <a class="glightboxGV" href="./images/portfolio/graphics/tuesday-tip-3.png">
-                        <img style="display:none" src="./images/portfolio/graphics/tuesday-tip-3.png"
+                    <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-3.webp">
+                        <img style="display:none" src="./images/portfolio/graphics/webp/tuesday-tip-3.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                 </div>
