fixing lazyload issue

--- a/index.html
+++ b/index.html
@@ -334,25 +334,25 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-3.jpg">
-                        <img class="lazyload" data-src="./images/portfolio/web-seo/web-design-and-dev-thumb-3.jpg"
+                        <img class="lazyload" data-src="images/portfolio/web-seo/web-design-and-dev-thumb-3.jpg"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-5.jpeg">
-                        <img class="lazyload" data-src="./images/portfolio/web-seo/web-design-and-dev-thumb-5.jpg"
+                        <img class="lazyload" data-src="images/portfolio/web-seo/web-design-and-dev-thumb-5.jpg"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-4.jpg">
-                        <img class="lazyload" data-src="./images/portfolio/web-seo/web-design-and-dev-thumb-4.jpg"
+                        <img class="lazyload" data-src="images/portfolio/web-seo/web-design-and-dev-thumb-4.jpg"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-1.jpeg">
                         <img class="lazyload" style="display:none"
-                            data-src="./images/portfolio/web-seo/web-design-and-dev-thumb-1.jpg" alt="CRM and CMS"
+                            data-src="images/portfolio/web-seo/web-design-and-dev-thumb-1.jpg" alt="CRM and CMS"
                             width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-2.jpeg">
                         <img class="lazyload" style="display:none"
-                            data-src="./images/portfolio/web-seo/web-design-and-dev-thumb-2.jpg" alt="CRM and CMS"
+                            data-src="images/portfolio/web-seo/web-design-and-dev-thumb-2.jpg" alt="CRM and CMS"
                             width="300" height="200">
                     </a>
                 </div>
