--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="description"
         content="Virtual Assistant Services - Website Development and SEO, CRM, CMS, & Admin Tasks, Social Media Graphics & Video, Process Optimization / Automation">
     <title>BVD VA's</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -388,7 +388,8 @@
     </footer>
 
     <!-- Site Scripts -->
-    <script src="./js/bundle-dist.js"></script>
+
+    <script async defer src="./js/bundle-dist.js"></script>
 </body>
 
 </html>
